monitoring/prometheus/service.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector:
    app: prometheus
  ports:
    - name: promui
      protocol: TCP
      port: 9090
      targetPort: 9090
